# discord_bot

./: Cargo.toml
src/: main.rs
src/commands/: help.rs  mod.rs  ping.rs  play.rs
