[package]
name = "discord_music_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
poise = "0.6.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }